# MedicinalChemistryFigureDesigner

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_CONTEXT.md  README.md  instructions.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: Architecture.md  Changelog.md  Claude_MCP_Integration.md  Contributing.md  DesignPrinciples.md  DevelopmentRoadmap.md  MCP_QuickStart.md
examples/: README.md  example-index.md  minimal_figure.yaml  specimen-notes.md
fsl/: README.md  schema.yaml  validator.md
knowledge/: pack.schema.yaml
prompts/: README.md  export-instructions.md  initial-brief.md  layout-generation.md  revision-pass.md  style-selection.md
rules/: README.md  accessibility.md  composition.md  export-formats.md  labeling.md  standards-placeholder.md
scripts/: render_example.py
specs/: COMMON_ERRORS.md  DECISION_TREE.md  EXAMPLES.md  FAILURE_RECOVERY.md  FIELD_REFERENCE.md  FIGURE_GRAMMAR.md  FSL_CHECKLIST.md  FSL_SPEC.md  LAYOUT_GUIDE.md  LLM_WORKFLOW.md  OBJECT_MODEL.md  OUTPUT_CONTRACT.md  PROMPTING_GUIDE.md  README.md  ROLE_DEFINITION.md  SELF_VALIDATION.md  STYLING_GUIDE.md  VALIDATION_RULES.md
styles/: README.md  annotation-styles.md  color-system.md  layout-grids.md  molecular-rendering.md  typography.md
templates/: README.md  comparison-layout.md  legend-block.md  multi-panel.md  schematic-flow.md  single-panel.md
tests/: helpers.py  test_api.py  test_compiler.py  test_compiler_mapping.py  test_gpt_image_prompt_builder.py  test_gpt_image_renderer.py  test_knowledge_packs.py  test_mcp_server.py  test_ontology_entities.py  test_ontology_registry.py  test_ontology_relationships.py  test_ontology_serialization.py  test_ontology_validator.py  test_parser.py  test_renderer_geometry.py  test_renderer_layout.py  test_serializer.py  test_svg_renderer.py  test_validator.py  test_visual_scene.py  test_visual_scene_regression.py
validation/: README.md  file-naming.md  metadata-requirements.md  pre-export-checklist.md  resolution-dpi.md
(+83 files in other folders)
