[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "figure-agent"
version = "1.0.0"
description = "FSL engine, ontology, compiler, renderers, public API, and MCP server for publication figure design"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.27,<2"]
dev = ["pytest>=8.0", "mcp>=1.27,<2"]

[project.scripts]
figure-agent-mcp = "figure_agent.mcp.server:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]